Prevent name overflow in sidebar

--- a/src/app/components/user-profile-summary/style.sass
+++ b/src/app/components/user-profile-summary/style.sass
@@ -20,3 +20,4 @@
     letter-spacing: .08em
     font-weight: 500
     margin-top: .5em
+    white-space: nowrap
